tests/expected_invalid_parse_missing_expression.diag.out
<input>:3:13: error: expected expression
        let x = ;
                ^
<input>:8:1: error: only module declarations are allowed at the top level; wrap declarations in `domain module Name { ... }` (or boundary, foundation, hazard)
    record LooseTopLevel {
    ^^^^^^
